# MicroPipeline

./: CMakeLists.txt  License.txt  README.md
Examples/: Bar.cpp  CMakeLists.txt  Foo.cpp  README.md  mp_classloader.cpp  mp_sharedlib.cpp  tbb_pipeline.cpp
Examples/MicroPipeline/: IProcessingModule.hpp  IService.hpp
Examples/MyProcessingModule/: MyModuleBar.hpp  MyModuleFoo.cpp  MyModuleFoo.hpp  PocoManifest.cpp
Examples/libmagic/: CMakeLists.txt  README.md  basic_curl.cc  basic_magic.cc
Examples/mp_asyncchannel/: CMakeLists.txt  mp_asyncchannel.cpp
Examples/mp_classloader/: CMakeLists.txt  mp_classloader.cpp
Examples/mp_classloader/MicroPipeline/: IProcessingModule.hpp
Examples/mp_classloader/MyProcessingModule/: MyModuleBar.cpp  MyModuleFoo.cpp
Examples/mp_sharedlib/: CMakeLists.txt
Examples/mp_subsystem/: CMakeLists.txt  MPSApplication.cpp  MPSApplication.h  mp_subsystem.cpp
Examples/stdthread/: CMakeLists.txt  README.md  example_01.cpp  example_02.cpp
Examples/tbb_pipeline/: CMakeLists.txt  tbb_pipeline.cpp
Examples/tbb_queues/: CMakeLists.txt  tbb_queues.cpp
Source/: CMakeLists.txt  MicroPipelineApplication.hpp  micro_pipeline.cpp
cmake/: FindPoco.cmake
